gen/LenguajeSLParser.java
// Generated from C:/Users/laura/Documentos/Laura/Universidad/2019-1/Lenguajes/Laboratorios/Lab_3/SLtoPython/grammar\LenguajeSL.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LenguajeSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, ASIGNACION=2, BRAC_DER=3, BRAC_IZQ=4, COMA=5, COMILLAS=6, DIFERENTE=7, 
		DIV=8, DOS_PUNTOS=9, IGUAL=10, LLAVE_DER=11, LLAVE_IZQ=12, MAYOR=13, MAYOR_IGUAL=14, 
		MENOR=15, MENOR_IGUAL=16, MOD=17, MULT=18, OR=19, PAR_DER=20, PAR_IZQ=21, 
		POW=22, PUNTO=23, PUNTO_COMA=24, SUMA=25, CASO=26, CADENA=27, CONST=28, 
		DESDE=29, EVAL=30, FALSE=31, FIN=32, HASTA=33, INICIO=34, LOGICO=35, MIENTRAS=36, 
		MATRIZ=37, NOT=38, NUMERICO=39, SI=40, SINO=41, SINO_SI=42, PASO=43, PROGRAMA=44, 
		REF=45, REGISTRO=46, REPETIR=47, RETORNA=48, SUBRUTINA=49, TIPOS=50, TRUE=51, 
		VAR=52, VECTOR=53, ID=54, NUMERO=55, CADENA_L=56, WS=57, COMMENT=58, BLOCK_COMMENT=59, 
		NO=60;
	public static final int
		RULE_programa = 0, RULE_nombre_programa = 1, RULE_subrutina = 2, RULE_lista_argumentos = 3, 
		RULE_tipo_var_argumentos = 4, RULE_retorna_s = 5, RULE_listas = 6, RULE_tipos = 7, 
		RULE_constantes = 8, RULE_variables = 9, RULE_programa_principal = 10, 
		RULE_tipo = 11, RULE_constante = 12, RULE_tipo_var = 13, RULE_tipo_id = 14, 
		RULE_registro = 15, RULE_vector = 16, RULE_matriz = 17, RULE_sentencia = 18, 
		RULE_si = 19, RULE_mientras = 20, RULE_repetir = 21, RULE_eval = 22, RULE_desde = 23, 
		RULE_funcion = 24, RULE_asignacion = 25, RULE_sino_si = 26, RULE_sino = 27, 
		RULE_caso = 28, RULE_condicion = 29, RULE_logico = 30, RULE_e = 31, RULE_paso = 32, 
		RULE_parametros = 33, RULE_expresion = 34, RULE_lista_llaves = 35, RULE_llave = 36, 
		RULE_retorna = 37, RULE_id_complejo = 38, RULE_llamada_funcion = 39, RULE_a_comas = 40, 
		RULE_id_puntos = 41, RULE_id_comas = 42, RULE_lista_tamano = 43, RULE_tamano = 44, 
		RULE_a = 45, RULE_p = 46;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "nombre_programa", "subrutina", "lista_argumentos", "tipo_var_argumentos", 
			"retorna_s", "listas", "tipos", "constantes", "variables", "programa_principal", 
			"tipo", "constante", "tipo_var", "tipo_id", "registro", "vector", "matriz", 
			"sentencia", "si", "mientras", "repetir", "eval", "desde", "funcion", 
			"asignacion", "sino_si", "sino", "caso", "condicion", "logico", "e", 
			"paso", "parametros", "expresion", "lista_llaves", "llave", "retorna", 
			"id_complejo", "llamada_funcion", "a_comas", "id_puntos", "id_comas", 
			"lista_tamano", "tamano", "a", "p"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'='", "']'", "'['", "','", null, "'<>'", "'/'", "':'", "'=='", 
			"'}'", "'{'", "'>'", "'>='", "'<'", "'<='", "'%'", "'*'", null, "')'", 
			"'('", "'^'", "'.'", "';'", null, "'caso'", "'cadena'", "'const'", "'desde'", 
			"'eval'", null, "'fin'", "'hasta'", "'inicio'", "'logico'", "'mientras'", 
			"'matriz'", "'not'", "'numerico'", "'si'", "'sino'", "'sino si'", "'paso'", 
			"'programa'", "'ref'", "'registro'", "'repetir'", "'retorna'", "'subrutina'", 
			"'tipos'", null, "'var'", "'vector'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AND", "ASIGNACION", "BRAC_DER", "BRAC_IZQ", "COMA", "COMILLAS", 
			"DIFERENTE", "DIV", "DOS_PUNTOS", "IGUAL", "LLAVE_DER", "LLAVE_IZQ", 
			"MAYOR", "MAYOR_IGUAL", "MENOR", "MENOR_IGUAL", "MOD", "MULT", "OR", 
			"PAR_DER", "PAR_IZQ", "POW", "PUNTO", "PUNTO_COMA", "SUMA", "CASO", "CADENA", 
			"CONST", "DESDE", "EVAL", "FALSE", "FIN", "HASTA", "INICIO", "LOGICO", 
			"MIENTRAS", "MATRIZ", "NOT", "NUMERICO", "SI", "SINO", "SINO_SI", "PASO", 
			"PROGRAMA", "REF", "REGISTRO", "REPETIR", "RETORNA", "SUBRUTINA", "TIPOS", 
			"TRUE", "VAR", "VECTOR", "ID", "NUMERO", "CADENA_L", "WS", "COMMENT", 
			"BLOCK_COMMENT", "NO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LenguajeSL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LenguajeSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public Programa_principalContext programa_principal() {
			return getRuleContext(Programa_principalContext.class,0);
		}
		public TerminalNode EOF() { return getToken(LenguajeSLParser.EOF, 0); }
		public Nombre_programaContext nombre_programa() {
			return getRuleContext(Nombre_programaContext.class,0);
		}
		public List<ListasContext> listas() {
			return getRuleContexts(ListasContext.class);
		}
		public ListasContext listas(int i) {
			return getRuleContext(ListasContext.class,i);
		}
		public List<SubrutinaContext> subrutina() {
			return getRuleContexts(SubrutinaContext.class);
		}
		public SubrutinaContext subrutina(int i) {
			return getRuleContext(SubrutinaContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeSLListener ) ((LenguajeSLListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeSLListener ) ((LenguajeSLListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeSLVisitor ) return ((LenguajeSLVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PROGRAMA) {
				{
				setState(94);
				nombre_programa();
				}
			}

			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONST) | (1L << TIPOS) | (1L << VAR))) != 0)) {
				{
				{
				setState(97);
				listas();
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103);
			programa_principal();
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SUBRUTINA) {
				{
				{
				setState(104);
				subrutina();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Nombre_programaContext extends ParserRuleContext {
		public TerminalNode PROGRAMA() { return getToken(LenguajeSLParser.PROGRAMA, 0); }
		public TerminalNode ID() { return getToken(LenguajeSLParser.ID, 0); }
		public Nombre_programaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nombre_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeSLListener ) ((LenguajeSLListener)listener).enterNombre_programa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeSLListener ) ((LenguajeSLListener)listener).exitNombre_programa(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeSLVisitor ) return ((LenguajeSLVisitor<? extends T>)visitor).visitNombre_programa(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Nombre_programaContext nombre_programa() throws RecognitionException {
		Nombre_programaContext _localctx = new Nombre_programaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_nombre_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(PROGRAMA);
			setState(113);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubrutinaContext extends ParserRuleContext {
		public TerminalNode SUBRUTINA() { return getToken(LenguajeSLParser.SUBRUTINA, 0); }
		public TerminalNode ID() { return getToken(LenguajeSLParser.ID, 0); }
		public TerminalNode PAR_IZQ() { return getToken(LenguajeSLParser.PAR_IZQ, 0); }
		public TerminalNode PAR_DER() { return getToken(LenguajeSLParser.PAR_DER, 0); }
		public Programa_principalContext programa_principal() {
			return getRuleContext(Programa_principalContext.class,0);
		}
		public Lista_argumentosContext lista_argumentos() {
			return getRuleContext(Lista_argumentosContext.class,0);
		}
		public Retorna_sContext retorna_s() {
			return getRuleContext(Retorna_sContext.class,0);
		}
		public List<ListasContext> listas() {
			return getRuleContexts(ListasContext.class);
		}
		public ListasContext listas(int i) {
			return getRuleContext(ListasContext.class,i);
		}
		public SubrutinaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subrutina; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeSLListener ) ((LenguajeSLListener)listener).enterSubrutina(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeSLListener ) ((LenguajeSLListener)listener).exitSubrutina(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeSLVisitor ) return ((LenguajeSLVisitor<? extends T>)visitor).visitSubrutina(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubrutinaContext subrutina() throws RecognitionException {
		SubrutinaContext _localctx = new SubrutinaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_subrutina);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(SUBRUTINA);
			setState(116);
			match(ID);
			setState(117);
			match(PAR_IZQ);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==REF || _la==ID) {
				{
				setState(118);
				lista_argumentos();
				}
			}

			setState(121);
			match(PAR_DER);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RETORNA) {
				{
				setState(122);
				retorna_s();
				}
			}

			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONST) | (1L << TIPOS) | (1L << VAR))) != 0)) {
				{
				{
				setState(125);
				listas();
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(131);
			programa_principal();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Lista_argumentosContext extends ParserRuleContext {
		public Tipo_var_argumentosContext tipo_var_argumentos() {
			return getRuleContext(Tipo_var_argumentosContext.class,0);
		}
		public TerminalNode PUNTO_COMA() { return getToken(LenguajeSLParser.PUNTO_COMA, 0); }
		public Lista_argumentosContext lista_argumentos() {
			return getRuleContext(Lista_argumentosContext.class,0);
		}
		public Lista_argumentosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_argumentos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeSLListener ) ((LenguajeSLListener)listener).enterLista_argumentos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeSLListener ) ((LenguajeSLListener)listener).exitLista_argumentos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeSLVisitor ) return ((LenguajeSLVisitor<? extends T>)visitor).visitLista_argumentos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Lista_argumentosContext lista_argumentos() throws RecognitionException {
		Lista_argumentosContext _localctx = new Lista_argumentosContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_lista_argumentos);
		try {
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				tipo_var_argumentos();
				setState(134);
				match(PUNTO_COMA);
				setState(135);
				lista_argumentos();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				tipo_var_argumentos();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tipo_var_argumentosContext extends ParserRuleContext {
		public Id_comasContext id_comas() {
			return getRuleContext(Id_comasContext.class,0);
		}
		public TerminalNode DOS_PUNTOS() { return getToken(LenguajeSLParser.DOS_PUNTOS, 0); }
		public Tipo_idContext tipo_id() {
			return getRuleContext(Tipo_idContext.class,0);
		}
		public TerminalNode REF() { return getToken(LenguajeSLParser.REF, 0); }
		public Tipo_var_argumentosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_var_argumentos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeSLListener ) ((LenguajeSLListener)listener).enterTipo_var_argumentos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeSLListener ) ((LenguajeSLListener)listener).exitTipo_var_argumentos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeSLVisitor ) return ((LenguajeSLVisitor<? extends T>)visitor).visitTipo_var_argumentos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tipo_var_argumentosContext tipo_var_argumentos() throws RecognitionException {
		Tipo_var_argumentosContext _localctx = new Tipo_var_argumentosContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tipo_var_argumentos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==REF) {
				{
				setState(140);
				match(REF);
				}
			}

			setState(143);
			id_comas();
			setState(144);
			match(DOS_PUNTOS);
			setState(145);
			tipo_id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Retorna_sContext extends ParserRuleContext {
		public TerminalNode RETORNA() { return getToken(LenguajeSLParser.RETORNA, 0); }
		public Tipo_idContext tipo_id() {
			return getRuleContext(Tipo_idContext.class,0);
		}
		public Retorna_sContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_retorna_s; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeSLListener ) ((LenguajeSLListener)listener).enterRetorna_s(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeSLListener ) ((LenguajeSLListener)listener).exitRetorna_s(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeSLVisitor ) return ((LenguajeSLVisitor<? extends T>)visitor).visitRetorna_s(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Retorna_sContext retorna_s() throws RecognitionException {
		Retorna_sContext _localctx = new Retorna_sContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_retorna_s);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(RETORNA);
			setState(148);
			tipo_id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListasContext extends ParserRuleContext {
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public ConstantesContext constantes() {
			return getRuleContext(ConstantesContext.class,0);
		}
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public ListasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeSLListener ) ((LenguajeSLListener)listener).enterListas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeSLListener ) ((LenguajeSLListener)listener).exitListas(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeSLVisitor ) return ((LenguajeSLVisitor<? extends T>)visitor).visitListas(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListasContext listas() throws RecognitionException {
		ListasContext _localctx = new ListasContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_listas);
		try {
			setState(153);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TIPOS:
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				tipos();
				}
				break;
			case CONST:
				enterOuterAlt(_localctx, 2);
				{
				setState(151);
				constantes();
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(152);
				variables();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TiposContext extends ParserRuleContext {
		public TerminalNode TIPOS() { return getToken(LenguajeSLParser.TIPOS, 0); }
		public List<TipoContext> tipo() {
			return getRuleContexts(TipoContext.class);
		}
		public TipoContext tipo(int i) {
			return getRuleContext(TipoContext.class,i);
		}
		public List<TerminalNode> PUNTO_COMA() { return getTokens(LenguajeSLParser.PUNTO_COMA); }
		public TerminalNode PUNTO_COMA(int i) {
			return getToken(LenguajeSLParser.PUNTO_COMA, i);
		}
		public TiposContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeSLListener ) ((LenguajeSLListener)listener).enterTipos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeSLListener ) ((LenguajeSLListener)listener).exitTipos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeSLVisitor ) return ((LenguajeSLVisitor<? extends T>)visitor).visitTipos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TiposContext tipos() throws RecognitionException {
		TiposContext _localctx = new TiposContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tipos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(TIPOS);
			setState(160); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(156);
				tipo();
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PUNTO_COMA) {
					{
					setState(157);
					match(PUNTO_COMA);
					}
				}

				}
				}
				setState(162); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantesContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(LenguajeSLParser.CONST, 0); }
		public List<ConstanteContext> constante() {
			return getRuleContexts(ConstanteContext.class);
		}
		public ConstanteContext constante(int i) {
			return getRuleContext(ConstanteContext.class,i);
		}
		public List<TerminalNode> PUNTO_COMA() { return getTokens(LenguajeSLParser.PUNTO_COMA); }
		public TerminalNode PUNTO_COMA(int i) {
			return getToken(LenguajeSLParser.PUNTO_COMA, i);
		}
		public ConstantesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeSLListener ) ((LenguajeSLListener)listener).enterConstantes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LenguajeSLListener ) ((LenguajeSLListener)listener).exitConstantes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeSLVisitor ) return ((LenguajeSLVisitor<? extends T>)visitor).visitConstantes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantesContext constantes() throws RecognitionException {
		ConstantesContext _localctx = new ConstantesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_constantes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(CONST);
			setState(169); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(165);
				constante();
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PUNTO_COMA) {
					{
					setState(166);
					match(PUNTO_COMA);
					}
				}

				}
				}
				setState(171); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariablesContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(LenguajeSLParser.VAR, 0); }
		public List<Tipo_varContext> tipo_var() {
			return getRuleContexts(Tipo_varContext.class);
		}
		public Tipo_varContext tipo_var(int i) {
			return getRuleContext(Tipo_varContext.class,i);
		}
		public List<TerminalNode> PUNTO_COMA() { return getTokens(LenguajeSLParser.PUNTO_COMA); }
		public TerminalNode PUNTO_COMA(int i) {
			return getToken(LenguajeSLParser.PUNTO_COMA, i);
		}
